<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/remove"
        android:title="@string/remove"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/removeAll"
        android:title="@string/removeAll"
        app:showAsAction="ifRoom"></item>
    <!--<item
        android:id="@+id/selectMultiple"
        android:title="@string/selectMultiple"
        app:showAsAction="never"></item>
        -->
</menu>